--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
 
     <color name="blue">#120d31</color>
     <color name="yellow">#ffc971</color>
-    <color name="light">#fff0e5</color>
+    <color name="light_yellow">#fff0e5</color>
     <color name="green">#47c09c</color>
     <color name="green_darker">#347667</color>
 
