--- a/app/src/main/res/layout/item_gallery_art.xml
+++ b/app/src/main/res/layout/item_gallery_art.xml
@@ -1,51 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+<com.google.android.material.card.MaterialCardView
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_margin="4dp">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:elevation="0dp"
+    app:cardCornerRadius="8dp"
+    android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/artMiniatureIV"
-        android:layout_width="100dp"
-        android:background="@color/blue"
-        android:layout_height="50dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
-
-    <TextView
-        android:id="@+id/artTitleTV"
-        android:layout_width="0dp"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/black"
-        android:textStyle="bold"
-        android:textSize="14sp"
-        android:maxLines="1"
-        android:ellipsize="end"
-        android:layout_marginStart="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/artMiniatureIV"
-        app:layout_constraintBottom_toTopOf="@id/artDescriptionTV"
-        app:layout_constraintStart_toEndOf="@id/artMiniatureIV"
-        tools:text="Salvador - Casa" />
+        android:background="@color/white"
+        android:padding="8dp"
+        android:layout_marginVertical="4dp">
 
-    <TextView
-        android:id="@+id/artDescriptionTV"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        app:layout_constraintStart_toEndOf="@id/artMiniatureIV"
-        app:layout_constraintTop_toBottomOf="@id/artTitleTV"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:textColor="@color/black"
-        android:textSize="12sp"
-        android:layout_marginStart="8dp"
-        android:maxLines="2"
-        android:ellipsize="end"
-        tools:text="Uma arte criada a partir da minha casa em salvador no politeama" />
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/artMiniatureIV"
+            android:layout_width="100dp"
+            android:background="@color/blue"
+            android:layout_height="50dp"
+            style="@style/roundedImageView"
+
+            android:contentDescription="TODO"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
+
+        <TextView
+            android:id="@+id/artTitleTV"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:textSize="14sp"
+            android:maxLines="1"
+            android:ellipsize="end"
+            android:layout_marginStart="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/artMiniatureIV"
+            app:layout_constraintBottom_toTopOf="@id/artDescriptionTV"
+            app:layout_constraintStart_toEndOf="@id/artMiniatureIV"
+            tools:text="Salvador - Casa" />
+
+        <TextView
+            android:id="@+id/artDescriptionTV"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            app:layout_constraintStart_toEndOf="@id/artMiniatureIV"
+            app:layout_constraintTop_toBottomOf="@id/artTitleTV"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:textColor="@color/dark_d4"
+            android:textSize="12sp"
+            android:layout_marginStart="8dp"
+            android:maxLines="2"
+            android:ellipsize="end"
+            tools:text="Uma arte criada a partir da minha casa em salvador no politeama" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+</com.google.android.material.card.MaterialCardView>
