feat: start to store bitmap on files but still not working the images

--- a/app/src/main/res/layout/activity_create_new_map_art.xml
+++ b/app/src/main/res/layout/activity_create_new_map_art.xml
@@ -21,7 +21,7 @@
         android:text="@string/create_new_art" />
 
     <FrameLayout android:id="@+id/mapArtsContainer"
-        tools:background="@color/green"
+        android:background="@color/green"
         android:layout_width="match_parent"
         android:layout_marginHorizontal="16dp"
         tools:visibility="gone"
