--- a/app/src/main/res/layout/item_gallery_art.xml
+++ b/app/src/main/res/layout/item_gallery_art.xml
@@ -15,13 +15,10 @@
         android:padding="8dp"
         android:layout_marginVertical="4dp">
 
-        <com.google.android.material.imageview.ShapeableImageView
+        <ImageView
             android:id="@+id/artMiniatureIV"
             android:layout_width="100dp"
-            android:background="@color/blue"
             android:layout_height="50dp"
-            style="@style/roundedImageView"
-
             android:contentDescription="TODO"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
