--- a/app/src/main/res/layout/item_gallery_art.xml
+++ b/app/src/main/res/layout/item_gallery_art.xml
@@ -1,63 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:elevation="0dp"
-    app:cardCornerRadius="8dp"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/white"
+    android:layout_marginVertical="4dp">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.cardview.widget.CardView
+        android:id="@+id/artMiniatureCV"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:padding="8dp"
-        android:layout_marginVertical="4dp">
+        android:elevation="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <ImageView
             android:id="@+id/artMiniatureIV"
-            android:layout_width="100dp"
-            android:layout_height="50dp"
-            android:contentDescription="TODO"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:contentDescription="TODO" />
 
-        <TextView
-            android:id="@+id/artTitleTV"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            android:textSize="14sp"
-            android:maxLines="1"
-            android:ellipsize="end"
-            android:layout_marginStart="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/artMiniatureIV"
-            app:layout_constraintBottom_toTopOf="@id/artDescriptionTV"
-            app:layout_constraintStart_toEndOf="@id/artMiniatureIV"
-            tools:text="Salvador - Casa" />
+    </androidx.cardview.widget.CardView>
 
-        <TextView
-            android:id="@+id/artDescriptionTV"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            app:layout_constraintStart_toEndOf="@id/artMiniatureIV"
-            app:layout_constraintTop_toBottomOf="@id/artTitleTV"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:textColor="@color/dark_d4"
-            android:textSize="12sp"
-            android:layout_marginStart="8dp"
-            android:maxLines="2"
-            android:ellipsize="end"
-            tools:text="Uma arte criada a partir da minha casa em salvador no politeama" />
+    <TextView
+        android:id="@+id/artTitleTV"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        android:textSize="14sp"
+        android:maxLines="1"
+        android:ellipsize="end"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@id/artMiniatureCV"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:text="Salvador - Casa" />
 
+    <TextView
+        android:id="@+id/artDescriptionTV"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        app:layout_constraintTop_toBottomOf="@id/artTitleTV"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:textColor="@color/dark_d4"
+        android:textSize="12sp"
+        android:layout_marginStart="8dp"
+        android:maxLines="2"
+        android:ellipsize="end"
+        tools:text="Uma arte criada a partir da minha casa em salvador no politeama" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    <ImageView
+        android:id="@+id/calendarIV"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_calendar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/artDescriptionTV"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="8dp"/>
 
+    <TextView
+        android:id="@+id/dateTV"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        app:layout_constraintStart_toEndOf="@id/calendarIV"
+        app:layout_constraintTop_toTopOf="@id/calendarIV"
+        app:layout_constraintBottom_toBottomOf="@id/calendarIV"
+        android:textColor="@color/dark_d4"
+        android:textSize="12sp"
+        android:layout_marginStart="8dp"
+        tools:text="11/11/1998" />
 
-</com.google.android.material.card.MaterialCardView>
+</androidx.constraintlayout.widget.ConstraintLayout>
