--- a/app/src/main/res/layout/activity_create_new_map_art.xml
+++ b/app/src/main/res/layout/activity_create_new_map_art.xml
@@ -13,9 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:textColor="@color/black"
-        android:textStyle="bold"
-        android:textSize="16sp"
+        style="@style/Text.ScreenTitle"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
         android:text="@string/create_new_art" />
