--- a/app/src/main/res/layout/item_gallery_art.xml
+++ b/app/src/main/res/layout/item_gallery_art.xml
@@ -29,9 +29,7 @@
         android:id="@+id/artTitleTV"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textColor="@color/black"
-        android:textStyle="bold"
-        android:textSize="14sp"
+        style="@style/Text.Title"
         android:maxLines="1"
         android:ellipsize="end"
         android:layout_marginStart="8dp"
@@ -48,8 +46,7 @@
         app:layout_constraintTop_toBottomOf="@id/artTitleTV"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:textColor="@color/dark_d4"
-        android:textSize="12sp"
+        style="@style/Text.GraySubTitle"
         android:layout_marginStart="8dp"
         android:maxLines="2"
         android:ellipsize="end"
@@ -57,13 +54,14 @@
 
     <ImageView
         android:id="@+id/calendarIV"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
         android:src="@drawable/ic_calendar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/artDescriptionTV"
-        android:layout_marginTop="8dp"
-        android:layout_marginStart="8dp"/>
+        android:layout_marginTop="4dp"
+        android:layout_marginStart="8dp"
+        app:tint="@color/dark_d4" />
 
     <TextView
         android:id="@+id/dateTV"
@@ -73,9 +71,8 @@
         app:layout_constraintStart_toEndOf="@id/calendarIV"
         app:layout_constraintTop_toTopOf="@id/calendarIV"
         app:layout_constraintBottom_toBottomOf="@id/calendarIV"
-        android:textColor="@color/dark_d4"
-        android:textSize="12sp"
-        android:layout_marginStart="8dp"
+        style="@style/Text.GraySubTitle"
+        android:layout_marginStart="4dp"
         tools:text="11/11/1998" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
