--- a/app/src/main/res/layout/martp_button_title_text.xml
+++ b/app/src/main/res/layout/martp_button_title_text.xml
@@ -10,5 +10,6 @@
     android:ellipsize="end"
     android:textSize="16sp"
     android:lineSpacingExtra="8sp"
+    android:fontFamily="@font/nunito_black"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto" />
