--- a/app/src/main/res/layout/activity_create_new_map_art.xml
+++ b/app/src/main/res/layout/activity_create_new_map_art.xml
@@ -59,7 +59,7 @@
         android:textAlignment="center"
         android:layout_marginTop="16dp"
         android:layout_marginHorizontal="16dp"
-        android:textColor="@color/dark_d1"
+        style="@style/Text.MiddleScreenInfoText"
         tools:text="It seems like something wrong happened. Please try again" />
 
     <manoellribeiro.dev.martp.core.components.MartpTextInput
@@ -80,6 +80,7 @@
         android:layout_marginHorizontal="16dp"
         android:imeOptions="actionDone"
         android:layout_marginTop="16dp"
+        app:cornerRadius="25dp"
         app:label="@string/add_a_description_for_you_map_art"
         tools:visibility="gone"
         app:placeholder="@string/enter_description" />
