--- a/app/src/main/res/layout/activity_location_access_details.xml
+++ b/app/src/main/res/layout/activity_location_access_details.xml
@@ -19,9 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:textColor="@color/black"
-        android:textStyle="bold"
-        android:textSize="20sp"
+        style="@style/Text.ScreenTitle"
         android:gravity="center"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="16dp"
@@ -34,7 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:gravity="start"
-        android:textColor="@color/dark_d1"
+        style="@style/Text.MiddleScreenInfoText"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:text="@string/location_usage_details" />
