--- a/app/src/main/res/layout/martp_text_input.xml
+++ b/app/src/main/res/layout/martp_text_input.xml
@@ -14,7 +14,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:lineSpacingMultiplier="1.0"
-        android:textSize="14sp"
+        style="@style/Text.InputLabel"
         tools:text="Label"/>
 
     <Space
@@ -51,8 +51,7 @@
             android:id="@+id/textInputEditText"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:textSize="16sp"
-            android:lineSpacingMultiplier="1.5"
+            style="@style/Text.InputText"
             />
 
     </com.google.android.material.textfield.TextInputLayout>
