--- a/app/src/main/res/layout/item_gallery_art.xml
+++ b/app/src/main/res/layout/item_gallery_art.xml
@@ -74,5 +74,21 @@
         style="@style/Text.GraySubTitle"
         android:layout_marginStart="4dp"
         tools:text="11/11/1998" />
-
+    
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/shareFAB"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:scaleX="0.7"
+        android:scaleY="0.7"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:src="@drawable/ic_share"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        app:borderWidth="0dp"
+        android:alpha="0.8"
+        app:tint="@android:color/black"
+        app:backgroundTint="@color/white"/>
+    
 </androidx.constraintlayout.widget.ConstraintLayout>
