--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -94,6 +94,8 @@
             tools:visibility="gone"
             tools:itemCount="5"
             tools:listitem="@layout/item_gallery_art"
+            android:clipToPadding="false"
+            android:paddingBottom="125dp"
             app:layout_constraintEnd_toEndOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
