fix: set the create new map art button corner radius

--- a/app/src/main/res/layout/activity_create_new_map_art.xml
+++ b/app/src/main/res/layout/activity_create_new_map_art.xml
@@ -98,6 +98,7 @@
         app:title="@string/save_art"
         android:layout_marginHorizontal="16dp"
         android:layout_marginBottom="16dp"
+        app:cornerRadius="50dp"
         style="@style/MartpButton.Primary"/>
 
 </LinearLayout>
