--- a/app/src/main/res/layout/activity_create_new_map_art.xml
+++ b/app/src/main/res/layout/activity_create_new_map_art.xml
@@ -19,10 +19,10 @@
         android:text="@string/create_new_art" />
 
     <FrameLayout android:id="@+id/mapArtsContainer"
-        android:background="@color/green"
+        android:background="@color/dark_d5"
         android:layout_width="match_parent"
         android:layout_marginHorizontal="16dp"
-        tools:visibility="gone"
+        tools:visibility="visible"
         android:layout_height="200dp" >
 
         <ProgressBar
