feat: improve behavior at the create new art screen

--- a/app/src/main/res/layout/activity_create_new_map_art.xml
+++ b/app/src/main/res/layout/activity_create_new_map_art.xml
@@ -100,6 +100,8 @@
         android:layout_marginHorizontal="16dp"
         android:layout_marginBottom="16dp"
         app:cornerRadius="50dp"
+        app:isEnabled="false"
+        android:clickable="false"
         style="@style/MartpButton.Primary"/>
 
 </LinearLayout>
