--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,7 +2,7 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.GenerateMapArts" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+         <item name="colorPrimaryDark">@color/blue</item>
     </style>
 
     <style name="Theme.GenerateMapArts" parent="Base.Theme.GenerateMapArts" />
@@ -58,12 +58,6 @@
     <style name="Theme.GenerateMapArts.FloatingActionButton">
         <item name="colorAccent">@color/white</item>
     </style>
-
-    <style name="roundedImageView" parent="">
-        <item name="cornerFamily">rounded</item>
-        <item name="cornerSize">8dp</item>
-    </style>
-
 
     <!--Text-->
     <style name="Text">
