--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -9,7 +9,7 @@
 
     <style name="Theme.App.Starting" parent="Theme.SplashScreen.IconBackground">
         <!-- Set the splash screen background to black -->
-        <item name="windowSplashScreenBackground">#fff0e5</item>
+        <item name="windowSplashScreenBackground">@color/light_yellow</item>
         <!-- Use windowSplashScreenAnimatedIcon to add a drawable or an animated
              drawable. -->
         <item name="windowSplashScreenAnimatedIcon" >@drawable/ic_logo_splash_screen</item>
