--- a/app/src/main/res/layout/activity_martp_project_info.xml
+++ b/app/src/main/res/layout/activity_martp_project_info.xml
@@ -99,6 +99,7 @@
         android:layout_marginHorizontal="16dp"
         android:layout_marginBottom="16dp"
         app:buttonBackgroundColor="@color/light_yellow"
+        app:cornerRadius="50dp"
         style="@style/MartpButton.Secondary"/>
 
     <manoellribeiro.dev.martp.core.components.MartpButton
@@ -108,6 +109,7 @@
         app:title="@string/review_on_play_store"
         android:layout_marginHorizontal="16dp"
         android:layout_marginBottom="16dp"
+        app:cornerRadius="50dp"
         style="@style/MartpButton.Primary"/>
 
 </LinearLayout>
