--- a/app/src/main/res/layout/activity_create_new_map_art.xml
+++ b/app/src/main/res/layout/activity_create_new_map_art.xml
@@ -1,127 +1,135 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+<ScrollView
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:background="@color/light_l5"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:fillViewport="true"
     android:layout_height="match_parent">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
 
-        <ImageButton
-            android:id="@+id/backIB"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="8dp"
-            android:layout_alignParentStart="true"
-            android:src="@drawable/ic_arrow_back"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="8dp"
-            android:background="?attr/selectableItemBackgroundBorderless" />
+        android:orientation="vertical"
+        android:background="@color/light_l5"
+        android:layout_height="match_parent">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageButton
+                android:id="@+id/backIB"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                android:layout_alignParentStart="true"
+                android:src="@drawable/ic_arrow_back"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="8dp"
+                android:background="?attr/selectableItemBackgroundBorderless" />
+
+            <TextView
+                android:id="@+id/titleTV"
+                tools:visibility="visible"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                style="@style/Text.ScreenTitle"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
+                android:text="@string/create_new_art" />
+
+        </RelativeLayout>
+
+        <FrameLayout android:id="@+id/mapArtsContainer"
+            android:background="@color/dark_d5"
+            android:layout_width="match_parent"
+            android:layout_marginHorizontal="16dp"
+            tools:visibility="visible"
+            android:layout_height="200dp" >
+
+            <ProgressBar
+                android:id="@+id/loadingIndicatorPB"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:theme="@style/Theme.GenerateMapArts.ProgressBarTheme"
+                android:layout_gravity="center"/>
+
+        </FrameLayout>
+
+        <Space
+            android:id="@+id/stateErrorS"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.5"
+            android:visibility="gone"
+            tools:visibility="visible"
+            />
+
+        <ImageView
+            android:id="@+id/errorImageIV"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_marginTop="56dp"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_error_general"/>
 
         <TextView
-            android:id="@+id/titleTV"
-            tools:visibility="visible"
+            android:id="@+id/errorTextTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            style="@style/Text.ScreenTitle"
+            android:layout_gravity="center"
+            android:textAlignment="center"
             android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp"
-            android:text="@string/create_new_art" />
+            android:layout_marginHorizontal="16dp"
+            style="@style/Text.MiddleScreenInfoText"
+            tools:text="It seems like something wrong happened. Please try again" />
 
-    </RelativeLayout>
-
-
-
-    <FrameLayout android:id="@+id/mapArtsContainer"
-        android:background="@color/dark_d5"
-        android:layout_width="match_parent"
-        android:layout_marginHorizontal="16dp"
-        tools:visibility="visible"
-        android:layout_height="200dp" >
-
-        <ProgressBar
-            android:id="@+id/loadingIndicatorPB"
-            android:layout_width="wrap_content"
+        <manoellribeiro.dev.martp.core.components.MartpTextInput
+            android:id="@+id/titleMTI"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:theme="@style/Theme.GenerateMapArts.ProgressBarTheme"
-            android:layout_gravity="center"/>
+            android:layout_marginHorizontal="16dp"
+            android:imeOptions="actionNext"
+            android:layout_marginTop="12dp"
+            tools:visibility="gone"
+            app:cornerRadius="12dp"
+            app:label="@string/choose_a_title_for_you_map_art"
+            app:placeholder="@string/enter_title" />
 
-    </FrameLayout>
+        <manoellribeiro.dev.martp.core.components.MartpTextInput
+            android:id="@+id/descriptionMTI"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="16dp"
+            android:imeOptions="actionDone"
+            android:layout_marginTop="12dp"
+            app:cornerRadius="12dp"
+            app:label="@string/add_a_description_for_you_map_art"
+            tools:visibility="gone"
+            app:placeholder="@string/enter_description" />
 
-    <Space
-        android:id="@+id/stateErrorS"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.5"
-        android:visibility="gone"
-        tools:visibility="visible"
-        />
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            />
 
-    <ImageView
-        android:id="@+id/errorImageIV"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_marginTop="56dp"
-        android:layout_gravity="center"
-        android:src="@drawable/ic_error_general"/>
+        <manoellribeiro.dev.martp.core.components.MartpButton
+            android:id="@+id/actionMB"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:title="@string/save_art"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginVertical="8dp"
+            app:cornerRadius="50dp"
+            app:isEnabled="false"
+            android:clickable="false"
+            style="@style/MartpButton.Primary"/>
 
-    <TextView
-        android:id="@+id/errorTextTV"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:textAlignment="center"
-        android:layout_marginTop="16dp"
-        android:layout_marginHorizontal="16dp"
-        style="@style/Text.MiddleScreenInfoText"
-        tools:text="It seems like something wrong happened. Please try again" />
+    </LinearLayout>
 
-    <manoellribeiro.dev.martp.core.components.MartpTextInput
-        android:id="@+id/titleMTI"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="16dp"
-        android:imeOptions="actionNext"
-        android:layout_marginTop="16dp"
-        tools:visibility="gone"
-        app:cornerRadius="12dp"
-        app:label="@string/choose_a_title_for_you_map_art"
-        app:placeholder="@string/enter_title" />
+</ScrollView>
 
-    <manoellribeiro.dev.martp.core.components.MartpTextInput
-        android:id="@+id/descriptionMTI"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="16dp"
-        android:imeOptions="actionDone"
-        android:layout_marginTop="16dp"
-        app:cornerRadius="12dp"
-        app:label="@string/add_a_description_for_you_map_art"
-        tools:visibility="gone"
-        app:placeholder="@string/enter_description" />
-
-    <Space
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        />
-
-    <manoellribeiro.dev.martp.core.components.MartpButton
-        android:id="@+id/actionMB"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:title="@string/save_art"
-        android:layout_marginHorizontal="16dp"
-        android:layout_marginBottom="16dp"
-        app:cornerRadius="50dp"
-        app:isEnabled="false"
-        android:clickable="false"
-        style="@style/MartpButton.Primary"/>
-
-</LinearLayout>
