--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -88,6 +88,7 @@
             android:id="@+id/mapArtsRV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:overScrollMode="never"
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@id/galleryTV"
             app:layout_constraintStart_toStartOf="parent"
