--- a/app/src/main/res/layout/activity_martp_project_info.xml
+++ b/app/src/main/res/layout/activity_martp_project_info.xml
@@ -6,13 +6,32 @@
     android:orientation="vertical"
     android:background="@color/light_yellow">
 
-    <ImageView
-        android:id="@+id/locationImageIV"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_marginTop="56dp"
-        android:layout_gravity="center"
-        android:src="@drawable/ic_martp_logo"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ImageButton
+            android:id="@+id/backButtonIV"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="top"
+            android:scaleType="fitXY"
+            android:layout_centerVertical="false"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_alignParentStart="true"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:src="@drawable/ic_arrow_back"/>
+
+        <ImageView
+            android:id="@+id/locationImageIV"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:src="@drawable/ic_martp_logo"/>
+
+    </RelativeLayout>
 
     <TextView
         android:id="@+id/descriptionTV"
@@ -89,18 +108,6 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         />
-
-    <manoellribeiro.dev.martp.core.components.MartpButton
-        android:id="@+id/closeMB"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:title="Back"
-        app:startIcon="@drawable/ic_arrow_back"
-        android:layout_marginHorizontal="16dp"
-        android:layout_marginBottom="16dp"
-        app:buttonBackgroundColor="@color/light_yellow"
-        app:cornerRadius="50dp"
-        style="@style/MartpButton.Secondary"/>
 
     <manoellribeiro.dev.martp.core.components.MartpButton
         android:id="@+id/allowLocationAccessMB"
